--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <div class="circulo" id="conteudo">
 
-            <button>Iniciar</button>
+            <button onclick="iniciarContador()">Iniciar</button>
 
         </div>
     </main>
