--- a/index.html
+++ b/index.html
@@ -9,16 +9,30 @@
 </head>
 <body>
 
-    <header>
-        <h1>Contador Digital</h1>
-    </header>
-
     <main>
-        <div class="circulo" id="conteudo">
 
-            <button onclick="iniciarContador()">Iniciar</button>
+        <section class="capa">
 
-        </div>
+            <div class="capa__topo">
+                <h1>Camila Silva</h1>
+                <p>Nails</p> 
+            </div>
+
+            <div class="capa__conteudo">
+                <img src="/static/img/capa.jpg" alt="img_capa">
+                
+            </div>
+            
+            <button onclick="agendaSite()">Agendar</button>
+
+        </section>
+
+        <section class="agenda" id="btnAgenda">
+
+
+
+        </section>
+
     </main>
 
     <script src="./static/main.js"></script>
