--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <main>
 
-        <section class="capa">
+        <section class="capa" id="telaCapaInicial">
 
             <div class="capa__topo">
                 <h1>Camila Silva</h1>
@@ -27,7 +27,7 @@
 
         </section>
 
-        <section class="agenda" id="btnAgenda">
+        <section class="agenda" id="telaAgendamento">
 
 
 
