--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="horarios">
 
                     <div>teste
-                        <a href="https://wa.me//558589613249&text=Bom+dia%2C%0AGostaria+de+agendar+o+horario+SEG+-+08%3A30+Da+manha.%0ACombinado+%3F&type=phone_number&app_absent=0">Enviar teste</a>
+                        <a href="https://wa.me//558589613249?text=Bom%20dia%2C%0AGostaria%20de%20agendar%20o%20horario%20SEG%20-%2008%3A30%20Da%20manha.%0ACombinado%20%3F">Enviar teste</a>
                     </div>
                     <div>TER</div>
                     <div>QUA</div>
